[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/actors/player/player_state_machine/PlayerStateMachine.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.494118, 0.462745, 0.662745, 1 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )

[node name="Player" type="KinematicBody" groups=[
"player",
]]
script = ExtResource( 1 )
turn_speed = 400

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="PlayerStateMachine" parent="." instance=ExtResource( 2 )]

[node name="Graphics" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Look" type="MeshInstance" parent="Graphics/Body"]
transform = Transform( 0.2, 0, 0, 0, 0.95, 3.27835e-08, 0, 3.27835e-08, 0.2, 0, 1, 1 )
mesh = SubResource( 5 )
material/0 = null

[node name="RayFloor" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_mask = 32

[node name="CheckpointChecker" type="RayCast" parent="."]
cast_to = Vector3( 0, -2.5, 0 )

[node name="CheckpointSetter" type="Timer" parent="CheckpointChecker"]
autostart = true

[connection signal="timeout" from="CheckpointChecker/CheckpointSetter" to="." method="_on_CheckpointSetter_timeout"]
